--- a/samconfig.toml
+++ b/samconfig.toml
@@ -20,6 +20,7 @@ region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"staging\""
 image_repositories = []
+confirm_changeset = true
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-exol4jzy1vft"
 
 [production]
@@ -31,4 +32,5 @@ region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"production\""
 image_repositories = []
+confirm_changeset = true
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-exol4jzy1vft"
